@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="400dp">
+
+    <com.klinker.android.twitter.manipulations.widgets.NetworkedCacheableImageView
+        android:id="@+id/picture"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:background="@drawable/rect_border_light"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_margin="20dp" />
+
+</LinearLayout>
