@@ -1,0 +1,60 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<!-- The main content view -->
+<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ptr_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+    <LinearLayout android:id="@+id/load_tweets"
+        android:orientation="vertical"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:gravity="center">
+
+        <com.klinker.android.twitter.manipulations.widgets.HoloTextView
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:text="@string/pic_search_disclaimer"
+            android:layout_marginBottom="35dp"
+            android:gravity="center"
+            android:textSize="16sp"/>
+
+        <Button
+            android:id="@+id/get_pics"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/load_pictures"/>
+
+    </LinearLayout>
+
+    <org.lucasr.smoothie.AsyncListView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/listView"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:divider="@android:color/transparent"
+        android:scrollbars="vertical"
+        android:background="@android:color/transparent"
+        android:listSelector="@android:color/transparent"
+        android:visibility="gone"
+        />
+
+    <LinearLayout android:id="@+id/spinner"
+        android:orientation="vertical"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:gravity="right"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:padding="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@android:style/Widget.Holo.Light.ProgressBar.Large"
+            android:indeterminateOnly="true" />
+
+    </LinearLayout>
+
+</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
