@@ -3,6 +3,7 @@
     &#8226; Talon Pull will automatically shut down to preserve battery when no data connection is active, then restart and check your timeline for missed tweets when data becomes available again.<br/>
     &#8226; Compose button can now float over the main timelines instead of being in the action bar<br/>
     &#8226; New Discover tab in the drawer for trends, suggested users, and nearby tweets<br/>
+    &#8226; Pictures page on a users profile<br/>
     &#8226; Animations for opening new pages and windows<br/>
     &#8226; Post tweets from different accounts in the compose window<br/>
     &#8226; Notifications button in the action bar<br/>
